--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "pages/assignments/assignments",
     "pages/assignment-list/assignment-list",
     "pages/achievement-demo/achievement-demo",
+    "pages/zuoye/index",
     "pages/tools/tools",
     "pages/emotion/emotion",
     "pages/video/video",
