feat:中间页升级,减小有套餐跳变

--- a/project.config.json
+++ b/project.config.json
@@ -48,7 +48,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wxe6933b0b77938bc4",
+  "appid": "wx11e3fbbf0dedc76f",
   "projectname": "DBT技能随身练",
   "condition": {},
   "simulatorPluginLibVersion": {},
