--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
     "pages/assignment-list/assignment-list",
     "pages/achievement-demo/achievement-demo",
     "pages/zuoye/index",
+    "pages/assignment-review/assignment-review",
     "pages/tools/tools",
     "pages/emotion/emotion",
     "pages/video/video",
