feat:课程20经验优化处理

--- a/project.config.json
+++ b/project.config.json
@@ -52,5 +52,6 @@
   "projectname": "DBT技能随身练",
   "condition": {},
   "simulatorPluginLibVersion": {},
-  "editorSetting": {}
+  "editorSetting": {},
+  "cloudfunctionTemplateRoot": "cloudfunctionTemplate/"
 }
