--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
     "pages/emotion/emotion",
     "pages/video/video",
     "pages/assignment-detail/assignment-detail",
-    "pages/skill-card/skill-card"
+    "pages/skill-card/skill-card",
+    "pages/cover/cover"
   ],
   "window": {
     "backgroundTextStyle": "light",
