--- a/project.private.config.json
+++ b/project.private.config.json
@@ -5,11 +5,18 @@
     "miniprogram": {
       "list": [
         {
-          "name": "/pages/cover/cover",
-          "pathName": "/pages/cover/cover",
+          "name": "pages/cover/cover",
+          "pathName": "pages/cover/cover",
           "query": "",
           "scene": null,
           "launchMode": "default"
+        },
+        {
+          "name": "/pages/cover/cover",
+          "pathName": "/pages/cover/cover",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
         },
         {
           "name": "pages/router/index",
